src/test/resources/parse/accept/standardComments.ul
// comment here
int bar ()
//comment here
{
    // comment here
} //comment here
// comment here
