src/test/resources/parse/reject/invalidUnicodeCharConstant.ul
boolean bar ()
{
    '\uu0020';
}
